log/build_2022-09-04_04-35-07/observation_reader/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/workspace/BMI/install/observation_reader/lib/python3.10/site-packages/observation_reader/blackrock_passive_ir_publisher.py", line 56
    self.declare_parameter('smoothed_parameter', list(range(280))
                          ^
SyntaxError: '(' was never closed

